--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,14 @@
 @import './base.css';
+@import './styles/fonts.css';
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-}
+} */
 
-a,
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
@@ -19,17 +20,18 @@ a,
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
-}
+} */
 
-@media (min-width: 1024px) {
-  body {
+/* @media (min-width: 1024px) { */
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
+
